fix: styles on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -173,8 +173,21 @@
 }
 
 @media (max-width: 600px) {
+  .title {
+    font-size: 3rem;
+  }
   .grid {
     width: 100%;
+    max-width: none;
+    min-width: unset;
     flex-direction: column;
+  }
+  .feature {
+    max-width: none;
+    min-width: unset;
+  }
+  .codeRunnerContainer {
+    width: 100%;
+    max-width: none;
   }
 }
